# query-excel

./: README.md  pyproject.toml
query_excel/: app.py
query_excel/utils/: _validation.py  config.json
